test/functions/helpers/integrationHelpers/fail/chats.js
//TODO: Add chats fail tests
const chats = () => {};

module.exports = { chats };
